# COMP565-xAI

./: COMP565_A3_xai.ipynb  README.md  deeplift.py  pyproject.toml  shapley.py  temp.ipynb
.ipynb_checkpoints/: COMP565_A3_xai-checkpoint.ipynb  temp-checkpoint.ipynb
