[tool.poetry]
name = "comp565-xai"
version = "0.1.0"
description = ""
authors = ["Keval Pipalia <keval.pipalia@mail.mcgill.ca>"]
readme = "README.md"
packages = [{include = "comp565_xai"}]

[tool.poetry.dependencies]
python = "3.10.10"
numpy = "1.25"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
jupyterlab = "^4.0.7"
torch = "2.1"
scikit-learn = "^1.3.1"
scipy = "^1.11.3"
llvmlite = "^0.41.0"
numba = "0.58"
shap = "^0.43.0"
seaborn = "^0.13.0"
captum = "^0.6.0"
black = {version = "23.10", extras = ["jupyter"]}
jupyter-black = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
